<resources>
    <string name="app_name">极速框架</string>
    <!--公共-->
    <string name="back">返回</string>
    <!--主页-->
    <string name="main_index">首页</string>
    <string name="main_member">会员</string>
    <string name="main_order">订单</string>
    <string name="main_mine">我的</string>

    <!--设置-->
    <string name="settings_title">Free开源项目系统设置</string>
    <string name="settings_language">App语言：</string>
    <string name="home_setting">设置</string>
    <string name="home_testApi">测试接口</string>
    <string name="home_loginDemo">登录示例</string>
    <string name="settings_languageAuto">自动</string>


</resources>
